Archiving 박스 레이아웃 수정

--- a/jnBlog.css
+++ b/jnBlog.css
@@ -466,7 +466,7 @@ nav>ul>li{
     width: 400px;
     height: auto+10px;
     background-color: white;
-    margin-left: 10%;
+    margin-left: 200px;
 
     border-radius: 20px 20px 20px 20px;
     box-shadow: 3px 5px 5px black;
@@ -497,7 +497,8 @@ nav>ul>li{
     width: 500px;
     height: auto+10px;
     background-color: white;
-    margin-right: 10%;
+    margin-top: 60px;
+    margin-right: 200px;
 
     border-radius: 20px 20px 20px 20px;
     box-shadow: 3px 5px 5px black;
